--- a/webo/templates/base.html
+++ b/webo/templates/base.html
@@ -28,10 +28,13 @@
     </button>
     <div class="collapse nav-collapse" id="navbar">
         <div class="navbar-nav">
+          {% if user.is_authenticated %}
             <a class="nav-item nav-link" id="home" href="/">Home</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+            {% else %}
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
             <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+            {% endif %}
         </div>
     </div>
     </nav>
@@ -76,5 +79,18 @@
     crossorigin="anonymous"
   ></script>
     
+
+  {% block javascript %}
+    <script type="text/javascript">
+      function deleteNote(noteId) {
+  fetch("/delete-note", {
+    method: "POST",
+    body: JSON.stringify({ noteId: noteId }),
+  }).then((_res) => {
+    window.location.href = "/";
+  });
+  }
+</script>
+{% endblock %}
 </body>
 </html>
